fixed middle mouse click on projects

--- a/index.html
+++ b/index.html
@@ -81,28 +81,30 @@
         <div class="max-width">
             <h2 class="title">Projects</h2>
             <div class="mproj-content">
-                <div class="card qc-project">
-                    <div class="box">
-                        <i class="fas fa-ruler-combined"></i>
-                        <div class="text">Quality Control Rig</div>
-                        <p>An automated QC rig designed for Casca 3D printed insoles.</p>
-                    </div>
-                </div>
-                <div class="card gesturecare-project">
-                    <div class="box">
-                        <i class="fas fa-hand-paper"></i>
-                        <div class="text">Gesture RC car</div>
-                        <p>An RC car controlled with hand keypoints.</p>
-                    </div>
-                </div>
-                <div class="card hockey-project">
-                    <div class="box">
-                        <i class="fas fa-hockey-puck"></i>
-                        <div class="text">Hockey robot</div>
-                        <p>A hockey dangling robot that tries to hit the puck away from the player.</p>
-                    </div>
-                </div>
-               </div>
+                <a class="card qc-project" href="pages/qcrig/qcrig.html">
+                            <div class="box">
+                                <i class="fas fa-ruler-combined"></i>
+                                <div class="text">Quality Control Rig</div>
+                                <p>An automated QC rig designed for Casca 3D printed insoles.</p>
+                            </div>
+                </a>
+
+                <a class="card gesturecare-project" href="pages/rccar/rccar.html">
+                        <div class="box">
+                            <i class="fas fa-hand-paper"></i>
+                            <div class="text">Gesture RC car</div>
+                            <p>An RC car controlled with hand keypoints.</p>
+                        </div>
+                </a>
+
+                <a class="card hockey-project" href="pages/hockey/hockeyrobot.html">
+                        <div class="box">
+                            <i class="fas fa-hockey-puck"></i>
+                            <div class="text">Hockey robot</div>
+                            <p>A hockey dangling robot that tries to hit the puck away from the player.</p>
+                        </div>
+                </a>
+               
             </div>
         </div>
     </section>
