update project pages responsiveness

--- a/pages/qcrig/qcrig.html
+++ b/pages/qcrig/qcrig.html
@@ -47,7 +47,7 @@
                     <p>This project was my 4th year Engineering capstone project. The goal was to make a quality control rig for the Vancouver based shoe making company, Casca. The rig can take qualitative measurements of custom 3D printed insoles. These measurements include size, weight, heel compression and arch height. The QC process is completely automated and involves data retrieval and storage to the existing database. The process starts with the technician scanning the QR code on the insole using a camera on the rig, then placing the insole on the platform and pressing the start QC button on the touch screen user interface. All the measurements are then automatically taken.</p>
                 </div>
                 
-                <iframe width="520" height="315"
+                <iframe width="520" height="320" id="myIframe"
                     src="https://www.youtube.com/embed/grxLRxKg1Uw">
                 </iframe>
 
