--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benedek Hegedus</title>
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/favicon2.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -50,27 +50,33 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <div class="text">Science, Technology, Engineering, Mathematics<span class="typing-2"></span></div>
+                    <div class="text"><span class="typing-2"></span></div> <!-- can add subtitle here -->
                     <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a complete view of the technologies I work on, my favorites of which are computers and robotics. This complete view starts at the transistor and goes all the way to GUIs and actuators. I hope that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
                 </div>
                 <div class="column right">
                     <div class="text"><span class="typing-2"></span></div>
                         <div class="contact-btns">
-                            <a href="https://github.com/beni045">  
-                                <i class="fab fa-github-square"></i>
+                            <a href="https://github.com/beni045"> 
+                                <div class="box"> 
+                                    <i class="fab fa-github-square"></i>
+                                </div>
                             </a>
                             <a href="https://www.linkedin.com/in/benedek-hegedus/">  
-                                <i class="fab fa-linkedin"></i>
+                                <div class="box">
+                                    <i class="fab fa-linkedin"></i>
+                                </div>
                             </a>
                             <div class="email-btn">  
-                                <i class="fas fa-envelope-square"></i>
+                                <div class="box">
+                                    <i class="fas fa-envelope-square"></i>
+                                </div>
                                 <div class="tooltip">
                                     <span class="tooltiptext"><i class="fas fa-clipboard" id="email-clipboard"></i> b.hegedus45@gmail.com</span>
                                   </div>
 
                             </div>
                         </div>
-                    <a href="bhegedus_resume.pdf" class="downloadcv-btn" download="bhegedus_resume.pdf">Download CV</a>
+                    <a href="bhegedus_resume.pdf" class="downloadcv-btn" download="bhegedus_resume.pdf"><div class="box">Download CV</div></a>
                 </div>
             </div>
         </div>
@@ -85,7 +91,7 @@
                             <div class="box">
                                 <i class="fas fa-ruler-combined"></i>
                                 <div class="text">Quality Control Rig</div>
-                                <p>An automated QC rig designed for Casca 3D printed insoles.</p>
+                                <p>Automated QC rig designed for Casca 3D printed insoles</p>
                             </div>
                 </a>
 
@@ -93,7 +99,7 @@
                         <div class="box">
                             <i class="fas fa-hand-paper"></i>
                             <div class="text">Gesture RC car</div>
-                            <p>An RC car controlled with hand keypoints.</p>
+                            <p>RC car controlled with keypoint-based hand gestures</p>
                         </div>
                 </a>
 
@@ -101,7 +107,7 @@
                         <div class="box">
                             <i class="fas fa-hockey-puck"></i>
                             <div class="text">Hockey robot</div>
-                            <p>A hockey dangling robot that tries to hit the puck away from the player.</p>
+                            <p>Hockey dangling robot that tries to hit the puck away from the player</p>
                         </div>
                 </a>
                
