--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#home">B<span>H</span></a></div>
+            <div class="logo"><a href="#home">BH</a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -51,7 +51,7 @@
             <div class="about-content">
                 <div class="column left">
                     <div class="text"><span class="typing-2"></span></div> <!-- can add subtitle here -->
-                    <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a complete view of the technologies I work on, my favorites of which are computers and robotics. This complete view starts at the transistor and goes all the way to GUIs and actuators. I hope that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
+                    <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a holistic view of the technologies I work on, my favorites of which are computers and robotics. This holistic view starts at the transistor and goes all the way to GUIs and actuators. I hope that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
                 </div>
                 <div class="column right">
                     <div class="text"><span class="typing-2"></span></div>
