--- a/pages/rccar/rccar.html
+++ b/pages/rccar/rccar.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="../../index.html#home">B<span>H</span></a></div>
+            <div class="logo"><a href="../../index.html#home">BH</a></div>
             <ul class="menu">
                 <li><a href="../../index.html#home" class="menu-btn">Home</a></li>
                 <li><a href="../../index.html#about" class="menu-btn">About</a></li>
