--- a/index.html
+++ b/index.html
@@ -34,52 +34,54 @@
     </nav>
 
     <!-- home section start -->
-    <section class="home" id="home">
-        <div class="max-width">
-            <div class="home-content">
-                <div class="text-1">Hello, I am</div>
-                <div class="text-2">Benedek Hegedus</div>
-                <div class="text-3">Welcome to my portfolio website! <span class="typing"></span></div>
-            </div>
-        </div>
-    </section>
-
-    <!-- about section start -->
-    <section class="about" id="about">
-        <div class="max-width">
-            <h2 class="title">About me</h2>
-            <div class="about-content">
-                <div class="column left">
-                    <div class="text"><span class="typing-2"></span></div> <!-- can add subtitle here -->
-                    <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a holistic view of the technologies I work on, my favorites of which are computers and robotics. This holistic view starts at the transistor and goes all the way to GUIs and actuators. I hope that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
+    <section class="home_about">
+        <section class="home" id="home">
+            <div class="max-width">
+                <div class="home-content">
+                    <div class="text-1">Hello, I am</div>
+                    <div class="text-2">Benedek Hegedus</div>
+                    <div class="text-3">Welcome to my portfolio website! <span class="typing"></span></div>
                 </div>
-                <div class="column right">
-                    <div class="text"><span class="typing-2"></span></div>
-                        <div class="contact-btns">
-                            <a href="https://github.com/beni045"> 
-                                <div class="box"> 
-                                    <i class="fab fa-github-square"></i>
-                                </div>
-                            </a>
-                            <a href="https://www.linkedin.com/in/benedek-hegedus/">  
-                                <div class="box">
-                                    <i class="fab fa-linkedin"></i>
-                                </div>
-                            </a>
-                            <div class="email-btn">  
-                                <div class="box">
-                                    <i class="fas fa-envelope-square"></i>
-                                </div>
-                                <div class="tooltip">
-                                    <span class="tooltiptext"><i class="fas fa-clipboard" id="email-clipboard"></i> b.hegedus45@gmail.com</span>
-                                  </div>
+            </div>
+        </section>
 
+        <!-- about section start -->
+        <section class="about" id="about">
+            <div class="max-width">
+                <h2 class="title">About me</h2>
+                <div class="about-content">
+                    <div class="column left">
+                        <div class="text"><span class="typing-2"></span></div> <!-- can add subtitle here -->
+                        <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a holistic view of the technologies I work on, my favorites of which are computers and robotics. This holistic view starts at the transistor and goes all the way to GUIs and actuators. I hope that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
+                    </div>
+                    <div class="column right">
+                        <div class="text"><span class="typing-2"></span></div>
+                            <div class="contact-btns">
+                                <a href="https://github.com/beni045"> 
+                                    <div class="box"> 
+                                        <i class="fab fa-github-square"></i>
+                                    </div>
+                                </a>
+                                <a href="https://www.linkedin.com/in/benedek-hegedus/">  
+                                    <div class="box">
+                                        <i class="fab fa-linkedin"></i>
+                                    </div>
+                                </a>
+                                <div class="email-btn">  
+                                    <div class="box">
+                                        <i class="fas fa-envelope-square"></i>
+                                    </div>
+                                    <div class="tooltip">
+                                        <span class="tooltiptext"><i class="fas fa-clipboard" id="email-clipboard"></i> b.hegedus45@gmail.com</span>
+                                    </div>
+
+                                </div>
                             </div>
-                        </div>
-                    <a href="bhegedus_resume.pdf" class="downloadcv-btn" download="bhegedus_resume.pdf"><div class="box">Download CV</div></a>
+                        <a href="bhegedus_resume.pdf" class="downloadcv-btn" download="bhegedus_resume.pdf"><div class="box">Download CV</div></a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </section>
 
     <!-- mprojects section start -->
