--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
                                 <li><a data-weight="4" href="https://en.cppreference.com/w/">C++</a></li>
                                 <li><a data-weight="4" href="https://www.linux.org/">Linux</a></li>
                                 <li><a data-weight="4" href="https://en.wikipedia.org/wiki/Assembly_language">Assembler</a></li>
+                                <li><a data-weight="4" href="https://docs.ros.org/en/foxy/index.html">ROS2</a></li>
+                                <li><a data-weight="4" href="http://gazebosim.org/">Gazebo</a></li>
                             </ul>
                         </div>
                     </div>
