--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <li><a data-weight="4" href="https://www.raspberrypi.org/">Raspberry Pi</a></li>
                                 <li><a data-weight="4" href="https://e.huawei.com/en/products/cloud-computing-dc/atlas/atlas-200">Atlas200DK</a></li>
                                 <li><a data-weight="4" href="https://en.wikipedia.org/wiki/SystemVerilog">SystemVerilog</a></li>
-                                <li><a data-weight="4" href="https://fpgasoftware.intel.com/">Quartus 3</a></li>
+                                <li><a data-weight="4" href="https://www.terasic.com.tw/cgi-bin/page/archive.pl?No=83">Altera DE1 (FPGA)</a></li>
                                 <li><a data-weight="4" href="https://www.ximea.com/en/usb3-vision-camera/hyperspectral-usb3-cameras-mini">Cameras</a></li>
                                 <li><a data-weight="4" href="https://components101.com/wireless/hc-05-bluetooth-module">Bluetooth</a></li>
                             </ul>
