add new project

--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
         <div class="max-width">
             <h2 class="title">Projects</h2>
             <div class="mproj-content">
+                <a class="card handcursor-project" href="https://github.com/beni045/HandCursor">
+                    <div class="box">
+                        <i class="fas fa-hand-paper"></i>
+                        <div class="text">Hand Cursor</div>
+                        <p>Use hands for touchless control of devices (IN PROGRESS)</p>
+                    </div>
+                </a>
+
                 <a class="card qc-project" href="pages/qcrig/qcrig.html">
                             <div class="box">
                                 <i class="fas fa-ruler-combined"></i>
@@ -99,11 +107,12 @@
 
                 <a class="card gesturecare-project" href="pages/rccar/rccar.html">
                         <div class="box">
-                            <i class="fas fa-hand-paper"></i>
+                            <i class="fas fa-car-side"></i>
                             <div class="text">Gesture RC car</div>
                             <p>RC car controlled with keypoint-based hand gestures</p>
                         </div>
                 </a>
+
 
                 <a class="card hockey-project" href="pages/hockey/hockeyrobot.html">
                         <div class="box">
@@ -111,8 +120,7 @@
                             <div class="text">Hockey robot</div>
                             <p>Hockey dangling robot that tries to hit the puck away from the player</p>
                         </div>
-                </a>
-               
+                </a>               
             </div>
         </div>
     </section>
