--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="home-content">
                     <div class="text-1">Hello, I am</div>
                     <div class="text-2">Benedek Hegedus</div>
-                    <div class="text-3">Welcome to my portfolio website! <span class="typing"></span></div>
+                    <div class="text-3"> <span class="typing"></span></div>
                 </div>
             </div>
         </section>
@@ -93,7 +93,7 @@
                     <div class="box">
                         <i class="fas fa-hand-paper"></i>
                         <div class="text">Hand Cursor</div>
-                        <p>Use hands for touchless control of devices (IN PROGRESS)</p>
+                        <p>Use hands for touchless control of devices (Mediapipe Hands reverse engineered) </p>
                     </div>
                 </a>
 
