--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="box">
                         <i class="fas fa-hand-paper"></i>
                         <div class="text">Hand Cursor</div>
-                        <p>Use hands for touchless control of devices (Mediapipe Hands reverse engineered) </p>
+                        <p>Hand keypoint detection - Mediapipe Hands reverse engineered </p>
                     </div>
                 </a>
 
