--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Benedek Hegedus</title>
     <link rel="icon" href="images/favicon2.png">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -89,6 +89,14 @@
         <div class="max-width">
             <h2 class="title">Projects</h2>
             <div class="mproj-content">
+                <a class="card torchslice-project" href="https://github.com/beni045/torchslice">
+                    <div class="box">
+                        <i class="fa-solid fa-code-merge"></i>
+                        <div class="text">torchslicer</div>
+                        <p>A pytorch graph 'slicer' built using torch.fx </p>
+                    </div>
+                </a>
+
                 <a class="card handcursor-project" href="https://github.com/beni045/HandCursor">
                     <div class="box">
                         <i class="fas fa-hand-paper"></i>
